--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="col-md-12 margin-top-5per padding-top-10 article-block margin-bottom-10">
+    <div class="col-md-12 margin-top-5per padding-top-10 article-block margin-bottom-10" id="form-box">
       <h1 class="text-center txtcolorw">ブログの編集</h1>
         <div class="form-group relative", id="image-area">
           <% if @article.image.attached? %>
