--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -29,6 +29,12 @@
 
 .article-img{
   width:100%;
+  height:150px;
+  object-fit: cover;
+}
+
+.show-img{
+  width:100%;
   height:300px;
   object-fit: cover;
 }
