--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -52,7 +52,7 @@
 }
 
 #article-box:hover{
-  border: 2px solid chartreuse;
+  border: 1px solid chartreuse;
 }
 
 .relative{
@@ -73,4 +73,14 @@
 
 #image-list img{
   width: 100px;
+}
+
+footer p {
+  color: #b3aeb5;
+  font-size: 12px;
+}
+
+footer {
+  padding-top: 30px;
+  padding-bottom: 20px;
 }
