--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,7 +8,7 @@
       <%end%>
       
     </div>
-    <h1 class="show-title txtcolorw"><%= @article.title %></h1>
+    <h3 class="txtcolorw"><%= @article.title %></h3>
     <p class="txtcolorw">投稿者：<%= @article.user.nickname %></p>
       <div class="padding-bottom-15 txtcolorw", style="padding: 10px;">
         <%= @article.body %>
