--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -30,7 +30,7 @@
 <footer>
   <div class="container">
     <div class="row">
-      <a href="/top">TOP画面へ</a>
+      <a href="/top" style="text-decoration:none; color:white;">TOP画面へ</a>
     </div>
   </div>
 </footer>
