動く背景を導入

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+
+    <canvas class="background"></canvas>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
+
     <%= render '/layouts/header' %>
 <!-- deviseの設定用、ログイン時のメッセージ表示など -->
     <p class="notice alert-success text-center"><%= notice %></p>
