--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -12,6 +12,7 @@
     <p class="txtcolorw">投稿者：<%= @article.user.nickname %></p>
       <div class="padding-bottom-15 txtcolorw", style="padding: 10px;">
         <%= @article.body %>
+        <%= render 'tag_list', tag_list: @article.tag_list%>
         <p class="text-right"><%= @article.created_at.strftime("%Y年%m月%d日 %H時%M分") %></p>
       </div>
       <%= link_to "編集する", edit_article_path, class:"btn btn-primary", style:"margin-bottom:10px; margin-right:10px;" %>
