--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container margin-bottom-10">
-  <div class="col-md-12 margin-top-5per padding-top-10 article-block">
+  <div class="col-md-12 padding-top-10 article-block">
     <div class="form-group relative">
       <% if @article.image.attached? %>
         <%= image_tag @article.image, class: "show-img" %>
@@ -15,8 +15,9 @@
         <%= render 'tag_list', tag_list: @article.tag_list%>
         <p class="text-right"><%= @article.created_at.strftime("%Y年%m月%d日 %H時%M分") %></p>
       </div>
-      <%= link_to "編集する", edit_article_path, class:"btn btn-primary", style:"margin-bottom:10px; margin-right:10px;" %>
-      <%= link_to "削除する", article_path, method: :delete, data: {confirm: "削除しますか？"} ,class:"btn btn-danger", style:"margin-bottom:10px; margin-right:10px;" %>
-
+      <%if @article.user_id == current_user.id%>
+        <%= link_to "編集する", edit_article_path, class:"btn btn-primary", style:"margin-bottom:10px; margin-right:10px;" %>
+        <%= link_to "削除する", article_path, method: :delete, data: {confirm: "削除しますか？"} ,class:"btn btn-danger", style:"margin-bottom:10px; margin-right:10px;" %>
+      <%end%>
     </div>
 </div>
