--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,7 +38,9 @@ body{
   // z-index: 0;
 }
 
-a:link, a:visited, a:hover, a:active {
-  color: white;
+a:link, a:visited, a:active {
   text-decoration: none;
+}
+a:hover{
+  color: deeppink;
 }
