--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="/top">Top</a>
       </li>
       <%# <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -31,7 +31,7 @@
         <a class="nav-link" href="/articles/new">新規投稿</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/users/sign_out", data-method="delete">ログアウト</a>
+        <a class="nav-link" style="color:red;" href="/users/sign_out", data-method="delete">ログアウト</a>
       </li>
       <% else %>
       <li class="nav-item">
