ビューを明るいデザインに変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,13 +21,13 @@
  @import 'font-awesome';
  
 body{
-  background-image: image-url("carbon06-1.jpg");
+  background-image: image-url("bck0043-066.jpg");
   background-size: cover;
   padding-top: 56px;
 }
 
 .alert{
-  color:white;
+  color:orange;
   text-align: center;
 }
 
