--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -23,7 +23,7 @@
 }
 
 .article-block{
-  background-color: #191919;
+  background-color: gainsboro;
   border:1px solid white;
 }
 
@@ -51,8 +51,8 @@
   border:1px solid;
 }
 
-.txtcolorw{
-  color: white;
+.txtcolor{
+  color: darkslategrey;
   text-decoration: none;
 }
 
@@ -69,7 +69,7 @@
 }
 
 #form-box{
-  background-color: darkgray;
+  background-color: lightblue;
 }
 
 #image-list img{
