--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -26,7 +26,7 @@ a {
   padding: 180px 0 100px 0;
   background-image: url(office-1209640_1920.jpg);
   background-size: cover;
-  color: white;
+  color: darkblue;
   text-align: center;
 }
 
