--- a/app/views/articles/top.html.erb
+++ b/app/views/articles/top.html.erb
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -7,6 +6,7 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   </head>
   <body>
+  <div data-scope-path="./top">
     <div class="top-wrapper">
       <div class="container">
         <h1>RECORD YOUR IDEAS.</h1>
@@ -66,5 +66,6 @@
         <p>スクラップブックサービス</p>
       </div>
     </footer>
+  </div>
   </body>
 </html>
