--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="text-center txtcolorw">
+<div class="text-center">
   <h2>新規登録</h2>
   <%= link_to user_facebook_omniauth_authorize_path, method: :post, style:"text-decoration: none" do %>
     <i class="fab fa-facebook-square txtcolorw", id="fbicon"></i>
