--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -12,7 +12,7 @@
   text-align: center;
 }
 .box label{
-  color: white;
+  // color: white;
   text-transform: lowercase;
   font-weight: 500;
 }
@@ -26,7 +26,7 @@
   padding: 14px 10px;
   width: 200px;
   outline: none;
-  color: white;
+  // color: white;
   border-radius: 24px;
   transition: 0.25s;
 }
@@ -44,7 +44,7 @@
   border: 2px solid #2ecc71;
   padding: 14px 40px;
   outline: none;
-  color: white;
+  // color: white;
   border-radius: 24px;
   transition: 0.25s;
   cursor: pointer;
@@ -56,6 +56,7 @@
 #fbicon,#ggleicon{
   font-size: 30px;
   margin: auto 10px;
+  color: darkgray;
 }
 
 #fbicon:hover{
@@ -65,7 +66,7 @@
 
 #ggleicon:hover{
   transition: color 0.5s;
-  color: cadetblue;
+  color: darkcyan;
 }
 
 .oauth-btn{
