画像の表示を編集、indexにトップ画面のボタン設置

--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -17,7 +17,7 @@ a {
 
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url(office-1209640_1920.jpg);
+  background-image: image-url("office-1209640_1920.jpg");
   background-size: cover;
   color: darkblue;
   text-align: center;
