--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -17,4 +17,12 @@
     <p class="txtcolorw">「,」で区切って複数のタグを登録できます</p>
   </div>
   <%=f.submit class: 'btn btn-success' %>
+  <br>
+  現在の共有設定：<%= @article.status_i18n %>
+  <% if @article.released? %>
+    <%= link_to '投稿を非公開にする', unrelease_article_path, method: :patch, class:"btn btn-dark" %>
+  <% else %>
+    <%= link_to '投稿を共有する', release_article_path, method: :patch, class:"btn btn-info" %>
+  <% end %>
+
 <% end %>
