コメント機能の実装完了

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -86,6 +86,23 @@ footer {
   padding-bottom: 20px;
 }
 
+.comments{
+  background-color: palegoldenrod;
+  border-radius: 15px;
+  border: 1px solid black;
+
+}
+
+.comments-wrapper{
+  padding: 5px;
+}
+
+.icon-delete:hover{
+  color: lightcoral;
+  cursor: pointer;
+  text-decoration: none;
+}
+
 // ページネーションのデザイン
 .pagination {
   justify-content: center;
