--- a/app/views/articles/top.html.erb
+++ b/app/views/articles/top.html.erb
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>備忘ブック</title>
+    <title>ふんわりブログ</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   </head>
   <body>
@@ -11,8 +11,8 @@
       <div class="container">
         <h1>RECORD YOUR IDEAS.</h1>
         <h1>SHARE YOUR KNOWLEDGES.</h1>
-        <p>備忘ブックはオンラインスクラップブックサービスです。</p>
-        <p>日々のアイデアや考えをを記録しましょう。</p>
+        <p>ふんわりブログはオンラインブログサービスです。</p>
+        <p>日々のアイデアや考えをを気軽に投稿しましょう。</p>
         <div class="btn-wrapper">
           <a href="/users/sign_up" class="push signup" style="text-decoration: none; color:white;">新規登録はこちら</a>
         </div>
@@ -55,7 +55,7 @@
     <div class="message-wrapper">
       <div class="container">
         <div class="heading">
-          <h2 class="txtcolorw">あなたも備忘ブックで日々のアイデアを記録しましょう！</h2>
+          <h2 class="txtcolorw">あなたもふんわりブログで日々のアイデアを投稿しましょう！</h2>
           <h3 class="txtcolorw">Let's record your ideas, share your knowledges!</h3>
         </div>
         <a class="push message" href="articles" style="text-decoration: none; color:white;">使ってみる！</a>
@@ -63,7 +63,7 @@
     </div>
     <footer>
       <div class="container">
-        <p>スクラップブックサービス</p>
+        <p>ふんわりブログ</p>
       </div>
     </footer>
   </div>
