ビュー微調整

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -11,6 +11,7 @@
         </div>
       <div class="padding-bottom-15">
         <%= render 'form', article: @article%>
+        <p>※初回投稿時は非公開で投稿されます</p>
       </div>
     </div>
 </div>
