--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,6 +8,7 @@
       <%end%>
     </div>
     <h3 class="txtcolorw"><%= @article.title %></h3>
+
     <p class="txtcolorw">投稿者：<%= @article.user.nickname %> &nbsp; 現在の共有設定：<%= @article.status_i18n %></p>
     
     <% if @article.released? %>
@@ -16,12 +17,12 @@
         タグ：<%= render 'tag_list', tag_list: @article.tag_list%>
         <p class="text-right"><%= @article.created_at.strftime("%Y年%m月%d日 %H時%M分") %></p>
       </div>
-      <%if @article.user_id == current_user.id%>
+      <%if @article.user_id == current_user.id %>
         <%= link_to "編集する", edit_article_path, class:"btn btn-primary", style:"margin-bottom:10px; margin-right:10px;" %>
         <%= link_to "削除する", article_path, method: :delete, data: {confirm: "削除しますか？"} ,class:"btn btn-danger", style:"margin-bottom:10px; margin-right:10px;" %>
       <%end%>
     <% elsif @article.unreleased? && current_user.id != @article.user_id %>
-      <h1>非公開な投稿です</h1>
+      <h5>非公開な投稿です！</h5>
     <% elsif @article.unreleased? && current_user.id == @article.user_id%>
       <div class="padding-bottom-15 txtcolorw", style="padding: 10px;">
         <%= @article.body %>
