通知画面のビューを記述

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -96,6 +96,12 @@ footer {
   padding: 5px;
 }
 
+.form-bg{
+  background-color: #F5DEB3;
+  border-radius: 5px;
+  border: 1px solid black;
+}
+
 // ページネーションのデザイン
 .pagination {
   justify-content: center;
