--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -1,20 +1,24 @@
 <% visitor = notification.visitor%>
-<% visited = notification.visted%>
-<div class="col-md-6 mx-auto">
-  <div class="form-inline">
+<% visited = notification.visited%>
+<div class="col-md-6 mx-auto form-bg">
+  <div class="form-inline padding-top-10">
     <span>
-      <%= visitor.name %>さんが
+      <h4><%= visitor.nickname %>さんが</h4>
     </span>
     <% case notification.action %>
-    <% when 'like' then%>
-      <% link_to 'あなたの投稿', notification.article, style:"font-wight: bold;"%>にいいねしました
-    <% when 'comment' then%>
-      <% if notification.article.user_id == visited.id%>
-        <%= 'あなたの投稿', notification.post, style:"font-weight: bold;"%>
-      <%else%>
-        <%= notification.article.user.name +'さんの投稿'%>にコメントしました
-      <%end%>
-      <p class="text-muted mb-0"><% Comment.find_by(id: notification.comment_id)&.comment %></p>
+      <% when 'like' then%>
+        <h4><%= link_to 'あなたの投稿', notification.article, style:"font-wight: bold;"%>にいいねしました</h4>
+      <% when 'comment' then%>
+        <% if notification.article.user_id == visited.id%>
+          <h4><%= link_to 'あなたの投稿', notification.article, style:"font-weight: bold;"%>にコメントしました</h4>
+        <%else%>
+          <h4><%= notification.article.user.nickname +'さんの投稿'%>にコメントしました</h4>
+        <%end%>
+    <%end%>
   </div>
-  <div class=" small text-muted text-right"> <%= time_ago_in_words(notification.created_at).upcase %></div>
+  <p class="text-muted mb-0">
+    <%= Comment.find_by(id: notification.comment_id)&.text %>
+  </p>
+  <div class=" small text-muted text-right"> <%= time_ago_in_words(notification.created_at).upcase %>前</div>
+  <hr>
 </div>
