--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -3,5 +3,10 @@
   <%= render notifications %>
   <%= paginate notifications %>
 <% else %>
-<p>通知はありません</p>
+<div class="container">
+  <div class="row">
+    <p class="mx-auto">通知はありません</p>
+  </div>
+</div>
+
 <% end %>
