--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,6 +11,9 @@
         <a class="nav-link" href="/">投稿一覧<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/ranking">ランキング</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/top">トップ</a>
       </li>
       <%# <li class="nav-item dropdown">
